# tubescribe-mcp

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
src/tubescribe_mcp/: __init__.py  server.py  transcript.py
tests/: conftest.py  test_server.py  test_transcript.py
